--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="all">
-<h1>Сайт</h1>
+<h1>Сайт с окнами</h1>
 <ol>
  <a href="example.com">Абсолютная гиперссылка</a> <br>
 <a href="https://example.com">Абсолютная гиперссылка с https</a><br>
